[package]
name = "rs_liq"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"