[package]
name = "rs_liq"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
alloy-primitives = "1.6.0"
governor = "0.10.4"
nonzero_ext = "0.3.0"
